Fixing secondary pages h1 alignment for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,19 @@
 
 /************* BASE STYLES - MOBILE FIRST **********************/
+@viewport{
+    zoom: 1.0;
+    width: extend-to-zoom;
+}
+
+@-ms-viewport{
+    width: extend-to-zoom;
+    zoom: 1.0;
+}
 
 body {
 	font-family: 'Catamaran';
 	margin: 0;
 	color: #095256;
-}
-
-.mainpage {
-	
-}
-
-#portfolio {
-	
-}
-
-#about {
-	
-}
-
-footer {
-	
 }
 
 p {
@@ -77,7 +70,7 @@ a {
 h1 {
 	font-family: 'Fredericka the Great';
 	font-size: 3em;
-	text-align: left;
+	text-align: center;
 	color: #bdbf09;
 	margin-top: 2.75em;
 	margin-bottom: 0;
@@ -106,20 +99,22 @@ header p {
 .secondary-pages h1{
 	padding-top: .75em;
 	margin: 0px;
-	text-align: left;
+	text-align: center;
 	color: white;
 	font-size: 50px;
-	
 }
 
 .secondary-pages #title-tagline {
 	border-bottom: 1px solid white;
 }
 
+.secondary-pages #title-tagline h1 {
+	margin: 0;
+}
+
 .secondary-pages #title-tagline h3 {
 	text-align: center;
 	padding-bottom: 25px;
-	
 }
 
 .secondary-pages h3 {
